# software-security-testing

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  armand.sh  cwe401.json  leak_detector  leak_detector.c  logs.json  lr1.json  lr21.json  test.java
.github/: secscan.yml
.github/workflows/: SecurityAnalysis.yml  main.yml
benchmark/: run_benchmark.py
benchmark/results/: benchmark_2026-03-10_15-11-46.csv  benchmark_2026-03-10_15-12-19.csv  benchmark_2026-03-10_15-18-24.csv  benchmark_2026-03-10_15-28-53.csv  benchmark_2026-03-10_15-31-54.csv  benchmark_2026-03-10_15-31-54.xlsx
include/: analyze.h  argparse.h  colors.h  constants.h  formatter.h  json_export.h  utils.h
old/: leak_detector.c
src/: analyze.c  argparse.c  clangAnalyzer.c  constants.c  deprecatedHeader.c  deprecated_header.c  formatter.c  formatter.h  integer_overflow.c  json_export.c  leak_detector.c  leakdetector2.c  main.c  signal_safety.c  utils.c
test/: buffer_overflow.c  demo.c  deprecated_header.c  integer_overflow.c  leak.c  leak5.c
